fix scrollbar

--- a/bw-social/public/assets/css/main.css
+++ b/bw-social/public/assets/css/main.css
@@ -134,7 +134,10 @@ a, ul, li {
 }
 
 @media only screen and (max-width: 750px) {
-
+  ::-webkit-scrollbar {
+    display: none;
+  }
+    
     a, ul, li {
         float: none;
     }
